--- a/style.css
+++ b/style.css
@@ -43,3 +43,25 @@ button {
     background-image: linear-gradient(#fecc4c, #ffac33);
     border: 3px solid #feac32;
 }
+
+#footer {
+    background-color: white;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    animation: fadeInUp 1s ease-in-out;
+}
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
